# whisper-vad

./: .gitignore  README.md  enc_dev_export_to_onnx.py  inference.py  onnx_inference.py  pyproject.toml  requirements.txt  train.py
configs/: detr.yaml  encoder_decoder.yaml  encoder_decoder_base.yaml  encoder_decoder_large_v2.yaml  encoder_decoder_small.yaml  encoder_linear.yaml  whisperseg_base.yaml
models/: __init__.py  detr_vad.py  encoder_only_vad.py  lightning_modules.py  whisperseg_lightning.py
reports/: experiments.md  metric_curves.csv  metrics_summary.json
utils/: __init__.py  dataset.py  metrics.py  whisperseg_data.py
